--- a/index.html
+++ b/index.html
@@ -74,13 +74,13 @@
 
       <ul>
         <li>
-          <img src="./images/img (3).jpg" alt="планшет" width="370" />
+          <img src="./images/img1.jpg" alt="планшет" width="370" />
         </li>
         <li>
-          <img src="./images/img (1) (1).jpg" alt="ноутбук" width="370" />
+          <img src="./images/img2.jpg" alt="ноутбук" width="370" />
         </li>
           <li>
-            <img src="./images/img (2) (1).jpg" alt="планшет" width="370" />
+            <img src="./images/img3.jpg" alt="планшет" width="370" />
           </li>
 
       </ul>
@@ -92,22 +92,22 @@
 
       <ul>
         <li>
-          <img src="./images/img (4) (1).jpg" alt="продакт менеджер" width="270" /></a>
+          <img src="./images/img4.jpg" alt="продакт менеджер" width="270" />
        <h3> Игорь Демьяненко</h3>
        <p>Product Designer</p>
         </li>
         <li>
-          <img src="./images/img (5) (1).jpg" alt="фронтенд розробник" width="270" /></a>
+          <img src="./images/img5.jpg" alt="фронтенд розробник" width="270" />
           <h3> Ольга Репина</h3>
           <p>Frontend Developer</p>
         </li>
         <li>
-          <img src="./images/img (6) (1).jpg" alt="маркетолог" width="270" /></a>
+          <img src="./images/img6.jpg" alt="маркетолог" width="270" />
           <h3> Николай Тарасов</h3>
           <p>Marketing</p>
         </li>
         <li>
-          <img src="./images/img (7) (1).jpg" alt="дизайнер" width="270" /></a>
+          <img src="./images/img7.jpg" alt="дизайнер" width="270" />
           <h3> Михаил Ермаков</h3>
           <p>UI Designer</p>
         </li>
